--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -22,30 +22,32 @@ Paulo Henrique de Carvalho Moreira
 **Coordenador-Geral de Tecnologia da Informação e Comunicação**
 
 **Comitê de Governança Digital - CGD:**  
-Chefe de Gabinete do Ministro:  
-Ângela Inácio - Titular  
+Chefe de Gabinete do Ministro: 
+Titular - Maria Ângela Inácio
+Suplente - Elton Gomes de Medeiros
 
-Secretário da Diversidade Cultural:  
-Magali  Moura - Titular  
+Secretária da Diversidade Cultural:
+Titular - Magali Guedes Moura
+Suplente - Renata de Carvalho Ferreira
 
-Secretário do Audiovisual:  
-Frederico Maia Mascarenhas - Titular  
-Heber Moura Trigueiro - Suplente  
+Secretário do Audiovisual:
+Titular - Frederico Maia Mascarenhas
+Suplente - Heber Moura Trigueiro
 
-Secretário da Economia Criativa:  
-Douglas Ramiro Capelo - Titular  
-José Mauro Gana Fini - Suplente  
+Secretário da Economia Criativa:
+Titular - Douglas Ramiro Capela
+Suplente - José Mauro Gnaspini
 
-Secretário de Fomento e Incentivo à Cultura:  
-José Paulo Soares Martins - Titular  
-Odecir Luiz Prata da Costa - Suplente  
+Secretário de Fomento e Incentivo à Cultura:
+Titular - José Paulo Soares Martins
+Suplente - Odecir Luiz Prata da Costa
 
-Secretário de Difusão e Infraestrutura Cultural:  
-Paulo Nakamura - Suplente  
+Secretário de Difusão e Infraestrutura Cultural: 
+Titular - Paulo Edy Nakamura
 
-Secretário de Direitos Autorais e Propriedade Intelectual:  
-Marcos Tavolari - Titular  
-Silvana Demartini de Oliveira - Suplente  
+Secretário de Direitos Autorais e Propriedade Intelectual:
+Titular - Marcos Tavolari
+Substituto - Silvana Dermatini Oliveira
  
 **Equipe de elaboração do PDTIC:**  
 Claudilea de Queiroz Sousa  
@@ -61,9 +63,9 @@ O presente Plano Diretor tem por objetivo manter o alinhamento entre a unidade d
 
 O documento foi elaborado em observância com as normas do Sistema de Administração dos Recursos de Tecnologia da Informação (SISP), com o intuito de traduzir os documentos de Planejamento Estrtégico do órgão em diretrizes concretas, dispondo assim de uma orientação objetiva para o atendimento das necessidades de TIC do Ministério, com base na disponibilidade de recursos disponíveis.
 
-As necessidades elencadas neste PDTIC também são oriundas dos problemas, fraquezas e oportunidades detectadas na análise SWOT da TIC Organizacional; das necessidades levantadas pelas áreas meio e fim através de entrevistas; e das informações obtidas no Plano Nacional de Cultura – PNC, Plano Plurianual – PPA e Carta de Serviços ao Cidadão. 
+As necessidades elencadas neste PDTIC também são oriundas dos problemas, fraquezas e oportunidades detectadas na análise SWOT da TIC Organizacional; das necessidades levantadas pelas áreas meio e fim; e das informações obtidas no Plano Nacional de Cultura – PNC, Plano Plurianual – PPA e Carta de Serviços ao Cidadão. 
 
-Este planejamento se lança ao triênio de 2018-2020, com o objetivo de realizar suas revisões ordinárias anualmente, e extraordinariamente a qualquer momento quando forem necessárias para manter a Coordenação-Geral de Infraestrutura Tecnológica (CGTIC) sempre alinhada com as necessidades das áreas de negócio.
+Este planejamento se lança ao triênio de 2018-2020, com o objetivo de realizar suas revisões ordinárias anualmente, e extraordinariamente a qualquer momento quando forem necessárias para manter a Coordenação-Geral de Tecnologia da Informação e Comunicação (CGTIC) sempre alinhada com as necessidades das áreas de negócio.
 
 Os instrumentos de monitoramento e controle da gestão da unidade de TIC, como o Portfólio de Projetos de TIC, o Catálogo de Serviços de TIC e o repositório de Processos de TIC, têm por objetivo dar viabilidade à implementação das diretrizes apontadas neste planejamento, dessa forma, os planos operacionais de TIC se tornam mais dinâmicos, dando assim respostas mais rápidas às demandas do Ministério da Cultura.
 
@@ -85,16 +87,16 @@ Além disso, a TIC tem transversalidade sobre vários eixos da organização, ta
 
 O Plano Diretor de Tecnologia da Informação e Comunicações – PDTIC é um instrumento de diagnóstico, planejamento e gestão dos recursos e processos de Tecnologia da Informação e Comunicações, com vistas a orientar o atendimento de necessidades tecnológicas e de informação do MinC. Este documento contém as necessidades de informação e soluções para os serviços de TIC, as metas a serem alcançadas, os projetos a serem desenvolvidas, de forma a minimizar o desperdício, garantir o controle e aplicações dos recursos naquilo que é considerado mais relevante e, por fim, melhorar a qualidade do gasto público.
 
-Este trabalho é fruto de um processo participativo de coleta de dados, análise de informações e proposição de ações das diversas áreas deste Ministério, conduzido pela Coordenação-Geral de Infraestrutura Tecnológica - CGTIC. Teve como premissa principal mapear as necessidades apontadas pelas áreas, alinhando as ações com os Planos estratégicos do órgão, garantindo assim o alinhamento institucional da TIC do Ministério da Cultura.
+Este trabalho é fruto de um processo participativo de coleta de dados, análise de informações e proposição de ações das diversas áreas deste Ministério, conduzido pela Coordenação-Geral de Tecnologia da Informação e Comunicação (CGTIC). Teve como premissa principal mapear as necessidades apontadas pelas áreas, alinhando as ações com os Planos estratégicos do órgão, garantindo assim o alinhamento institucional da TIC do Ministério da Cultura.
 
 A execução deste Plano Diretor dar-se-á no período de 2018 a 2020, devendo ser analisado semestralmente pelo Comitê de Governança Digital - CGD para acompanhamento da execução, e, conforme análise, propor-se-á alterações de priorização. 
 
 ## 1.1 Estrutura Organizacional
-Atual estrutura regimental do MinC é regida pelo Decreto nº 9.411, de 18 de Junho de 2018:
+A atual estrutura regimental do MinC é regida pelo Decreto nº 9.411, de 18 de Junho de 2018:
 
 ![orgminc](https://raw.githubusercontent.com/culturagovbr/pdtic-minc/master/PDTIC-2018-2020/img/orgminc.jpg "Estrutura Organizacional do MinC.")
 
-O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias ligadas diretamente à Secretaria Executiva, cada uma com sua função específica. Para dar capilaridade às suas ações, o Ministério também conta com 6 regionais, que atuam de forma descentralizada nas localidades, em busca de facilitar o atendimento do seu público-alvo. Além da sua estrutura própria, o sistema MinC conta ainda com a participação de 7 instituições vinculadas e 4 órgãos colegiados formados com a participação da sociedade.
+O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias ligadas diretamente à Secretaria Executiva, cada uma com sua função específica. Para dar capilaridade às suas ações, o Ministério também conta com 4 representações regionais, que atuam de forma descentralizada nas localidades, em busca de facilitar o atendimento do seu público-alvo. Além da sua estrutura própria, o sistema MinC conta ainda com a participação de 7 instituições vinculadas e 4 órgãos colegiados formados com a participação da sociedade.
 
 
 # 2  TERMOS E ABREVIAÇÕES
@@ -120,11 +122,11 @@ O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias l
 
 # 3 ORGANIZAÇÃO DA TIC 
 
-A Coordenação-Geral de Infraestrutura Tecnológica – CGTIC é uma unidade subordinada à Subsecretaria de Gestão Estratégica – SGE que, por sua vez, é órgão setorial do Sistema de Administração dos Recursos de Informação e Informática – SISP. A SGE tem suas atribuições definidas no Decreto nº 9.411, de 18 de Junho de 2018.
+A Coordenação-Geral de Tecnologia da Informação e Comunicação (CGTIC) é uma unidade subordinada à Subsecretaria de Gestão Estratégica – SGE que, por sua vez, é órgão setorial do Sistema de Administração dos Recursos de Informação e Informática – SISP. A SGE tem suas atribuições definidas no Decreto nº 9.411, de 18 de Junho de 2018.
 
 À CGTIC compete normatizar, planejar, coordenar, orientar, executar, e avaliar o desenvolvimento de planos, programas e processos referentes à gestão dos recursos de Tecnologia da Informação, segurança da informação e comunicações no âmbito do Ministério da Cultura.
 
-A CGTIC propõe diretrizes e implementa políticas de Tecnologia da Informação no Ministério da Cultura em consonância com as orientações, normas e diretrizes definidas pelo órgão central do SISP, a Secretaria de Logística e Tecnologia da Informação do Ministério do Planejamento, Orçamento e Gestão.
+A CGTIC propõe diretrizes e implementa políticas de Tecnologia da Informação no Ministério da Cultura em consonância com as orientações, normas e diretrizes definidas pelo órgão central do SISP, a Secretaria de Tecnologia da Informação e Comunicação do Ministério do Planejamento, Desenvolvimento e Gestão.
 
 A atual posição da CGTIC na estrutura do MinC está apresentada abaixo:
 
@@ -940,7 +942,7 @@ Total de 115 projetos.
 
 # 9  PLANO DE GESTÃO DE PESSOAS DA TIC NO MINC
 
-A força de trabalho da Coordenação-geral de Infraestrutura Tecnológica (CGTIC) do MinC até março de 2018 estava composta por 10 servidores, 47 terceirizados (em exercício na SEDE, no Edifício Parque da Cidade e nas representações regionais) e 10 estagiários distribuídos conforme a tabela a seguir.	
+A força de trabalho da Coordenação-Geral de Tecnologia da Informação e Comunicação (CGTIC) do MinC até março de 2018 estava composta por 10 servidores, 47 terceirizados (em exercício na SEDE, no Edifício Parque da Cidade e nas representações regionais) e 10 estagiários distribuídos conforme a tabela a seguir.	
 
 **2018**
 
