--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -47,8 +47,8 @@ Titular - Paulo Edy Nakamura
 
 Secretário de Direitos Autorais e Propriedade Intelectual:
 Titular - Marcos Tavolari
-Substituto - Silvana Dermatini Oliveira
- 
+Suplente - Silvana Dermatini Oliveira
+
 **Equipe de elaboração do PDTIC:**  
 Claudilea de Queiroz Sousa  
 Christian Moryah Contiero Miranda    
