--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -101,7 +101,7 @@ O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias l
 
 # 2  TERMOS E ABREVIAÇÕES
 - **MinC** Ministério da Cultura
-- **SGE** - Subsecretaria de Gestão Estratégica
+- **SGE** Subsecretaria de Gestão Estratégica
 - **CGD** Comitê de Governança Digital
 - **CGTIC** Coordenação-Geral de Tecnologia da Informação e Comunicação
 - **CGOTI** Coordenação de Governança de Tecnologia da Informação e Comunicação
@@ -118,7 +118,7 @@ O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias l
 - **PPA** Plano Plurianual
 - **LOA** Lei Orçamentária Anual
 - **LDO** Lei de Diretrizes Orçamentárias
-
+- **PCDMinC** Plano Anual de Capacitação e Desenvolvimento do Ministério da Cultura 
 
 # 3 ORGANIZAÇÃO DA TIC 
 
@@ -136,7 +136,7 @@ Após a reestruturação do MinC, promovida pelo Decreto nº 9.411, de 18 de Jun
 
 ![cgtecatual](https://raw.githubusercontent.com/culturagovbr/pdtic-minc/master/PDTIC-2018-2020/img/cgtic.jpg "Estrutura Atual da CGTIC.")
 
-Ressalta-se que a estrutura da CGTIC sofreu redução em seu quadro de pessoal, as quais foram trazidas pelo Decreto nº 8.837, de 17 de agosto de 2016, e após pelo decreto Decreto nº 9.411, de 18 de Junho de 2018. A redução no número de cargos de Direção e Assessoramento Superior foi de 12 para 6, ou seja, uma redução na ordem de 50%. Além disto, esta redução distanciou-se da nova proposta organizacional, a qual é apresentada abaixo. Tal proposta foi elaborada visando a eficiência no cumprimento dos objetivos estratégicos do órgão. Frisa-se que, apesar da redução estrutural, houve um aumento no número de demandas e projetos de TIC executados concorrentemente, como pode ser constatado no histórico deste plano.
+Ressalta-se que a estrutura da CGTIC sofreu redução em seu quadro de pessoal, as quais foram trazidas pelo Decreto nº 8.837, de 17 de agosto de 2016. A redução no número de cargos de Direção e Assessoramento Superior foi de 12 para 6, ou seja, uma redução na ordem de 50%. Além disto, esta redução distanciou-se da nova proposta organizacional, a qual é apresentada abaixo. Tal proposta foi elaborada visando a eficiência no cumprimento dos objetivos estratégicos do órgão. Frisa-se que, apesar da redução estrutural, houve um aumento no número de demandas e projetos de TIC executados concorrentemente, como pode ser constatado no histórico deste plano.
 
 ## 3.1 Proposta de estrutura organizacional
 
@@ -341,7 +341,7 @@ Do ponto de vista da infraestrutura, alguns ativos de rede podem ser absorvidos 
 | Metodologia de gestão de projetos instituída                                                     | Deficiência na comunicação dos serviços e resultados de TIC                                           | 
 | Plano de Dados abertos integrado do Sistema MinC                                                 | Inexistência de escritório de aquisições de TIC                                                       | 
 | Catálogo de Serviços orientado aos usuários                                                      | Ausência de um Plano de Continuidade de Negócios                                                      | 
-| Cargos de gestão ocupados por servidores carreira                                                | Reduzido quadro de servidores                                                                | 
+| Cargos de gestão ocupados por servidores de carreira                                                | Reduzido quadro de servidores                                                                | 
 | Automação dos processos de desenvolvimento de software                                           | Falta de cultura de processos                                                                         | 
 | Utilização das últimas tecnologias de mercado                                                    |                                                                                                       | 
 | Apoio da SGE e da Alta Administração                                                             |                                                                                                       | 
@@ -374,7 +374,7 @@ Os fatores levantados como críticos para a efetiva implantação e consequente 
 ## 4.10 Documentos de Referência 
 
 - Plano Nacional de Cultura
-- Estrutura Rgimental do MinC- Decreto Nº 8.837, de 17 de agosto de 2016
+- Estrutura Rgimental do MinC- Decreto nº 9.411, de 18 de Junho de 2018
 - Lei Orçamentária Anual - LOA 2018
 - Lei de Diretrizes Orçamentárias - LDO 2018
 - Metas do Plano Plurianual – PPA – Ministério da Cultura
@@ -801,7 +801,7 @@ Para o atendimento das necessidades, priorizaram-se projetos de TIC, os quais fo
 
 ## 8.1  Critérios de Priorização
 
-Para identificar quais são os projetos mais impactantes para o órgão, com o objetivo e dirigir os esforços e recursos de TI para a realização dessas prioritariamente, foi aplicado o método de priorização abaixo:
+Para identificar quais são os projetos mais impactantes para o órgão, com o objetivo e dirigir os esforços e recursos de TIC para a realização dessas prioritariamente, foi aplicado o método de priorização abaixo:
 
 | Critério             | Valor     | Descrição                                                                   |  
 |----------------------|-----------|-----------------------------------------------------------------------------| 
@@ -942,7 +942,7 @@ Total de 115 projetos.
 
 # 9  PLANO DE GESTÃO DE PESSOAS DA TIC NO MINC
 
-A força de trabalho da Coordenação-Geral de Tecnologia da Informação e Comunicação (CGTIC) do MinC até março de 2018 estava composta por 10 servidores, 47 terceirizados (em exercício na SEDE, no Edifício Parque da Cidade e nas representações regionais) e 10 estagiários distribuídos conforme a tabela a seguir.	
+A força de trabalho da Coordenação-Geral de Tecnologia da Informação e Comunicação (CGTIC) do MinC até setembro de 2018 estava composta por 10 servidores, 47 terceirizados (em exercício na SEDE, no Edifício Parque da Cidade e nas representações regionais) e 10 estagiários distribuídos conforme a tabela a seguir.	
 
 **2018**
 
@@ -994,7 +994,7 @@ Os servidores da CGTIC dedicam maior parte de seu tempo ao planejamento das cont
 
 Como vem sendo diagnosticado em planejamentos anteriores, a quantidade de servidores para a gestão dessa unidade de TIC é pequena, sendo necessário aumentar o quadro da CGTIC por meio da solicitação de novos Analistas em Tecnologia da Informação ao Ministério do Planejamento, Desenvolvimento e Gestão, e/ou com a alocação de servidores efetivos do MinC na CGTIC.
 
-Para agravar ainda mais a situação de carência de recursos humanos na CGTIC, com a reformulação da estrutura de cargos do MinC, ocorrida em 2016, a CGTIC teve um impacto significativo no seu organograma ao perder cargos de chefia sendo o mais impactante deles a Coordenação de Governança, cujo retorno vem sendo reivindicado para o melhor funcionamento da unidade.
+Para agravar ainda mais a situação de carência de recursos humanos na CGTIC, com a reformulação da estrutura de cargos do MinC, ocorrida em 2016, a CGTIC teve um impacto significativo no seu organograma ao perder cargos de gestão.
 
 De acordo com o guia de PDTIC do SISP, “o planejamento de TIC apoia a realização de uma gestão efetiva de recursos. Isto se refere a melhor utilização possível dos investimentos e o apropriado gerenciamento dos recursos críticos de TIC: aplicativos, processos, informações, infraestrutura e pessoas.”
 
@@ -1035,7 +1035,7 @@ Quando for o caso, a CGTIC viabilizará capacitações “In Company”, a fim d
 | Inteligência Artificial - Deep Learning                                                      | 2                                             | 
 | Congressos, workshops e eventos técnicos                                                     | Sob demanda                                   | 
 
-Os recursos a serem investidos na capacitação dos servidores da CGTIC podem ser captados de acordo com a disponibilidade de orçamento prevista no PDTIC e no PCDMinC – 2018.
+Os recursos a serem investidos na capacitação dos servidores da CGTIC podem ser captados de acordo com a disponibilidade de orçamento prevista no PDTIC e no PCDMinC.
 
 # 10  PLANO ORÇAMENTÁRIO
 
@@ -1138,7 +1138,7 @@ Por fim, espera-se com esse planejamento oferecer para os usuários do Ministér
 |**[Sistema de Apoio às Leis de Incentivo à Cultura - SALIC](#a-lei-rouanet-e-o-incentivo-cultural)** |Produção |Fomento e Incentivo |O sistema fornece os mecanismos para gestão do incentivo fiscal à projetos culturais pelos mecanismos da Lei Rouanet, mediando as diversas etapas **(proposta, admissão, captação de recursos, execução e prestação de contas)** envolvendo os vários atores **(Proponente, Avaliadores, Incentivador e Fornecedores)** |AGPL3 |
 |**[Vale Cultura](http://vale.cultura.gov.br/)**|Produção |Fomento e Incentivo |Sistema para gestão do Programa Vale Cultura que beneficia trabalhadores através de recursos de incentivo fiscal dos empregadores |MinC |
 |**[Gestão de Ouvidoria Governamental - GOG](http://ouvidoria.cultura.gov.br/)** |Produção |Ouvidoria |Sistematiza o fluxo de recepção e tratamento das manifestações à ouvidoria entre as unidades do MinC |AGPL3 |
-|**[Mapa da Cultura](http://mapas.cultura.gov.br/) - [SNIIC](#sistema-nacional-de-informações-e-indicadores-culturais-sniic)**|Produção |Estatísticas e Indicadores Culturais |Plataforma para mapeamento coletivo de projetos, artistas, espaços, eventos culturais e seus produtores. |AGPL3 |
+|**[Mapa da Cultura](http://mapas.cultura.gov.br/) **|Produção |Estatísticas e Indicadores Culturais |Plataforma para mapeamento coletivo de projetos, artistas, espaços, eventos culturais e seus produtores. |AGPL3 |
 |**SalicWeb**|Descontinuação |Fomento e Incentivo Cultural |Ferramenta para realização de Editais de Fomento |MinC |
 |**[Plataforma Rede Cultura Viva](http://culturaviva.gov.br/)**|Produção |Cidadania e Diversidade Cultural |Cadastro dos Pontos e Pontões de Cultura para atendimento à [Lei Cultura Viva](http://www.cultura.gov.br/cultura-viva1)|AGPL3 |
 |**[Cadastro Nacional de Bibliotecas](http://bibliotecas.cultura.gov.br/)**|Produção |Livro, Leitura, Literatura e Bibliotecas |Cadastro de bibliotecas públicas e comunitárias utilizando o Mapas Culturais |AGPL3 |
