--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -23,31 +23,31 @@ Paulo Henrique de Carvalho Moreira
 
 **Comitê de Governança Digital - CGD:**  
 Chefe de Gabinete do Ministro: 
-Titular - Maria Ângela Inácio
-Suplente - Elton Gomes de Medeiros
+Titular - Maria Ângela Inácio  
+Suplente - Elton Gomes de Medeiros    
 
-Secretária da Diversidade Cultural:
-Titular - Magali Guedes Moura
-Suplente - Renata de Carvalho Ferreira
+Secretária da Diversidade Cultural:  
+Titular - Magali Guedes Moura  
+Suplente - Renata de Carvalho Ferreira  
 
-Secretário do Audiovisual:
-Titular - Frederico Maia Mascarenhas
-Suplente - Heber Moura Trigueiro
+Secretário do Audiovisual:  
+Titular - Frederico Maia Mascarenhas  
+Suplente - Heber Moura Trigueiro  
 
-Secretário da Economia Criativa:
-Titular - Douglas Ramiro Capela
-Suplente - José Mauro Gnaspini
+Secretário da Economia Criativa:  
+Titular - Douglas Ramiro Capela  
+Suplente - José Mauro Gnaspini  
 
-Secretário de Fomento e Incentivo à Cultura:
-Titular - José Paulo Soares Martins
-Suplente - Odecir Luiz Prata da Costa
+Secretário de Fomento e Incentivo à Cultura:  
+Titular - José Paulo Soares Martins  
+Suplente - Odecir Luiz Prata da Costa  
 
-Secretário de Difusão e Infraestrutura Cultural: 
-Titular - Paulo Edy Nakamura
+Secretário de Difusão e Infraestrutura Cultural:   
+Titular - Paulo Edy Nakamura  
 
-Secretário de Direitos Autorais e Propriedade Intelectual:
-Titular - Marcos Tavolari
-Suplente - Silvana Dermatini Oliveira
+Secretário de Direitos Autorais e Propriedade Intelectual:  
+Titular - Marcos Tavolari  
+Suplente - Silvana Dermatini Oliveira  
 
 **Equipe de elaboração do PDTIC:**  
 Claudilea de Queiroz Sousa  
@@ -645,7 +645,7 @@ São necessidades por serviços que envolvam soluções de Tecnologia da Informa
 
 ### 7.1.2 Necessidade de Infraestrutura de TIC
 
-São necessidades por equipamentos de Tecnologia da Informação e Comunicação.
+São necessidades por equipamentos e sustentação de infraestrutura de TIC.
 
 | ID   | Necessidade                                                                               | Descrição                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | Áreas Demandantes                             | 
 |------|-------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------| 
@@ -665,13 +665,13 @@ São necessidades por equipamentos de Tecnologia da Informação e Comunicação
 | NE14 | Disponinibilizar No-break                                                                                  |                                                   | GM, SGE                                      | 
 | NE15 | Disponinibilizar Notebooks                                                                                 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               | GM, SDAPI, SAV, SEC                          | 
 | NE16 | Implementar solução de orquestração de containers                                 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | SGE                                    | 
-| NE17 | Disponibilizar rack para Switch                                                                          |                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | GM                                           | 
+| NE17 |                                                                          |                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |                                            | 
 | NE18 | Disponibilizar rede com link de internet dedicado, visando a necessidade de trasmissão ao vivo, coletivas, videoconferências e demais atividades de assessoria de comunicação                                                                |                                                                                                                                                                                                                                                                                                                                                                    | GM                                           | 
-| NE19 | Disponibilizar Scanners de mesa com reconhecimento de caracteres                                                                                   |                                                                                                                                                                                        | GM, SAV, SDC, SEC, GM                         | 
+| NE19 | Disponibilizar scanners de mesa com reconhecimento de caracteres                                                                                   |                                                                                                                                                                                        | GM, SAV, SDC, SEC, GM                         | 
 | NE20 |                                         |                                                                                                                                                                                                                                            |                                          | 
-| NE21 | Serviços de Internet  ??????????????????????????????                                                                    | Necessitamos dos serviços de internet para realizar os procedimentos de licitação por meio do sistema SEI, Comprasnet, SIASG, SIAFI, entre outros. Além disso, é importante para consultas de preços, materiais, legislações, impedimentos, regularidades, entr                                                                                                                                                                                                                                                        | SPOA                                         | 
+| NE21 | Melhorar os serviços de internet                                                                    |                                                                                                                                                                                                                                                      | SPOA                                         | 
 | NE22 | Disponibilizar impressora plotter para impressão de documentos em grandes formatos (A0, A1 e A2)                                   |                                                                                                                                                                                                                                                                                                                                                                                                    | SEINFRA                                      | 
-| NE23 | Serviços de Telefonia   ???????????????????????????????                                                                  | Necessitamos dos serviços de telefonia para prestar atendimento ao cidadão, aos licitantes e demais áreas demandantes de aquisições e serviços no âmbito do MinC                                                                                                                                                                                                                                                                                                                                                       | SGE, SPOA,                                    | 
+| NE23 | Serviços de Telefonia                                                                    |                                                                                                                                                                                                                                                                                                                                                    | SGE, SPOA                                    | 
 | NE24 | Disponibilizar switch                                                                                    |                                                                                                                                                                                                                                                                                                                                                                              | GM                                           | 
 | NE25 | Disponibilizar tablet                                                                                    |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                | SEC                                          | 
 | NE26 | Disponibilizar telefone móvel                                                                            |                                                                                                                                                                                                                                                                                                                                                                                                 | SGE, SPOA                                    | 
