--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -296,7 +296,7 @@ As metas estabelecidas ajudam a direcionar as ações de TIC com foco nos seus o
 | OE.08 - Potencializar o uso de inteligência artificial e ciência de dados no desenvolvimento de soluções de TIC    | Número de assistentes virtuais implantados em sistemas do MinC                                               | **2018**: 1    **2019**: 2    **2020**: 3   | 
 | OE.09 - Estimular o uso e compartilhamento de tecnologias livres                                                   | Número de projetos disponibilizados em repositórios abertos                                            | **2018**: 60   **2019**: 80   **2020**: 100  | 
 | OE.10 – Impulsionar a inovação nos processos de desenvolvimento de software em parcerias com universidades         | Quantidade de projetos desenvolvimentos em parcerias com universidades                                       | **2018**: 6    **2019**: 8   **2020**: 10  | 
-|                                                                                                                    | Implementação de nova Metodologia de Software                                                                | **2018**: 10%  **2019**: 50%  **2020**: 100% | 
+|                                                                                                                    | Implementação de  Metodologia de Software                                                                | **2018**: 10%  **2019**: 50%  **2020**: 100% | 
 
 ## 4.7 Estratégia do Comitê Integrado de Tecnologia da Informação **CITIC**
 
