--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -557,7 +557,7 @@ São necessidades por serviços que envolvam soluções de Tecnologia da Informa
 | NS1  | Disponibilizar mecanismo para acompanhar o rendimento de servidor vinculado ao SEI                                                                                                                                        | SPOA              | 
 | NS2  | Disponibilizar mecanismo para acompanhar e controlar saldos das notas de empenho e saldos de contratos - SIMINC                                                                                                           | SPOA              | 
 | NS3  | Disponibilizar mecanismo para acompanhar histórico de tramitações                                                                                                                                                         | SPOA              | 
-| NS4  | Desenvolver banco de dados de informações das fichas de monitoramento                                                                                                                                                     | SDAPI             | 
+| NS4  | Desenvolver banco de dados de informações das fichas de monitoramento das metas do PNC                                                                                                                                                     | SDAPI             | 
 | NS5  | Integrar acervo do EDA-FBN ao Sistema de Registro de Direitos Autorais                                                                                                                                                    | SDAPI             | 
 | NS6  | Coletar informações das fichas de monitoramento das metas do PNC                                                                                                                                                          | SDAPI             | 
 | NS7  | Suporte técnico para utilização do Delibera na Plataforma do CNPC durante a realização de Consultas Públicas                                                                                                              | SDAPI             | 
