--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -71,13 +71,6 @@ Os instrumentos de monitoramento e controle da gestão da unidade de TIC, como o
 
 No período proposto por este planejamento, a CGTIC do Ministério da Cultura se coloca no desafio de modernizar os métodos de gestão, e se aproximar do estado da arte e da tecnologia para conseguir prover soluções inovadoras, não apenas para os seus usuários, mas também para o conjunto do Governo Federal, permitindo-se compartilhar novas experiências e soluções em busca de um modelo de gestão corporativa de Tecnologia da Informação para a Administração Pública Federal, mais eficiente, ágil e responsivo.
 
-## Histórico de Versões
-0.1 - Tag
-
-## **Sumário**
-
-[TOC]
-
 # 1  INTRODUÇÃO
 O Ministério da Cultura, criado pelo Decreto nº 91.144, de 15 de março de 1985, desenvolve políticas de fomento e incentivo nas áreas de letras, artes, folclore e nas diversas formas de expressão da cultura nacional. Tem como áreas de competência a política nacional de cultura e a proteção do patrimônio histórico e cultural.
 
@@ -414,7 +407,7 @@ Os fatores levantados como críticos para a efetiva implantação e consequente 
 - Política de Governança de Tecnologia da Informação e Comunicação - Portaria Nº97, de 13 de outubro de 2017
 - Atribuições do Comitê Integrado de Tecnologia da Informação - Portaria Nº 92, de 9 de outubro de 2017
 - Atribuições do Comitê de Governança Digital no âmbito do Ministério da Cultura - Portaria Nº 3, de 17 de janeiro de 2017
-- [Site do Ministério sobre Normas de TIC](https://www.cultura.gov.br/normas-de-ti "Normas de TIC")
+- Site do Ministério sobre Normas de TIC - https://www.cultura.gov.br/normas-de-ti
 
 # 6  RESULTADOS DO PDTIC ANTERIOR 
 
